# apollo_pydantic

./: .gitignore  LICENSE  README.md  pyproject.toml  requirments.txt
apollo_pydantic/: __init__.py  client.py  core.py  logger.py
examples/: settings.py
